stacks/jenkins/security.tf
resource "aws_security_group" "jenkins_ssh" {
  name        = "jenkins-ssh"
  description = "Allow SSH and HTTP access to Jenkins"
  vpc_id      = data.terraform_remote_state.eks_vpc.outputs.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_ingress_cidr]
  }

  ingress {
    description = "Jenkins UI"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = [var.ssh_ingress_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
